--- a/src/messages_en.properties
+++ b/src/messages_en.properties
@@ -1,4 +1,6 @@
 input.string.data=Input 
-input.first.name.data=first name in format [A-Z][a-z]{1,20}
+input.first.name.data=first name in format 
 input.wrong.data=Wrong input! Repeat please! 
 input.login.data=your login in format [A-Za-z0-9_-]{8,20}
+input.secname.data = your Second Name in format[A-Z][a-z]{1,20}
+input.fathers.data = your fathers name in format
